<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="txt_saldodisponivel">Saldo disponível</string>
    <string name="txt_saldolimite">Saldo - Limite</string>
    <string name="txt_verextrato">Ver Extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarga">Recarga</string>
    <string name="txt_cartaofinal">Cartão Final</string>
    <string name="txt_ola">Olá,</string>
</resources>